deploy/components/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: envs-ingress-test2-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: envs-ingress-test2.cluster.koalaops.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: envs-ingress-test2-service
            port:
              number: 80
